prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/const_scope_3.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/const_scope_3.nut:4:8

else
  print(x)
        ^


